--- a/portfolio.html
+++ b/portfolio.html
@@ -25,25 +25,25 @@
         <nav class="nav">
           <a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-            <li class="item"><a href="#footer" class="link">Контакты</a></li>
+            <li class="site-nav__item"><a href="./index.html" class="site-nav__link link">Студия</a></li>
+            <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link link current">Портфолио</a></li>
+            <li class="site-nav__item"><a href="#footer" class="site-nav__link link">Контакты</a></li>
           </ul>
         </nav>
 
         <ul class="auth-nav list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link">
-              <svg class="svg-nav" width="16" height="12">
+          <li class="auth-nav__item">
+            <a href="mailto:info@devstudio.com" class="auth-nav__link link">
+              <svg class="auth-nav__svg" width="16" height="12">
                 <use href="./images/svg-main/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
 
-          <li class="item">
-            <a href="tel:+380961111111" class="link">
-              <svg class="svg-nav" width="10" height="16">
+          <li class="auth-nav__item">
+            <a href="tel:+380961111111" class="auth-nav__link link">
+              <svg class="auth-nav__svg" width="10" height="16">
                 <use href="./images/svg-main/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -55,9 +55,9 @@
 
     <main>
       <section class="portfolio">
-        <div class="container">
+        <div class="container portfolio-box">
           <h1 class="visually-hidden">Примеры работ</h1>
-          <ul class="list">
+          <ul class="portfolio__list list">
             <li class="list-btn"><button type="button" class="button link">Все</button></li>
             <li class="list-btn"><button type="button" class="button link">Веб-сайты</button></li>
             <li class="list-btn"><button type="button" class="button link">Приложения</button></li>
@@ -65,165 +65,165 @@
             <li class="list-btn"><button type="button" class="button link">Маркетинг</button></li>
           </ul>
 
-          <ul class="list card">
-            <li class="card-set">
-              <a href="" class="card-link link">
-                <div class="card-thumb">
-                  <div class="overlay-portfolio">
-                    <p class="overlay-text">
+          <ul class="list portfolio__card">
+            <li class="portfolio__card-set">
+              <a href="" class="portfolio__card-link link">
+                <div class="portfolio__card-thumb">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                   <img src="./images-portfolio/1.jpg" alt="Технокряк" width="370" height="294" />
                 </div>
-                <div class="card-info">
-                  <h2 class="portfolio-title">Технокряк</h2>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <div class="portfolio__card-info">
+                  <h2 class="portfolio__title">Технокряк</h2>
+                  <p class="portfolio__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-set">
-              <a href="" class="card-link link">
-                <div class="card-thumb">
-                  <div class="overlay-portfolio">
-                    <p class="overlay-text">
+            <li class="portfolio__card-set">
+              <a href="" class="portfolio__card-link link">
+                <div class="portfolio__card-thumb">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                   <img src="./images-portfolio/2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
                 </div>
-                <div class="card-info">
-                  <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                  <p class="portfolio-text">Дизайн</p>
+                <div class="portfolio__card-info">
+                  <h2 class="portfolio__title">Постер New Orlean vs Golden Star</h2>
+                  <p class="portfolio__text">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-set">
-              <a href="" class="card-link link">
-                <div class="card-thumb">
-                  <div class="overlay-portfolio">
-                    <p class="overlay-text">
+            <li class="portfolio__card-set">
+              <a href="" class="portfolio__card-link link">
+                <div class="portfolio__card-thumb">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                   <img src="./images-portfolio/3.jpg" alt="Ресторан Seafood" width="370" height="294" />
                 </div>
-                <div class="card-info">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="portfolio__card-info">
+                  <h2 class="portfolio__title">Ресторан Seafood</h2>
+                  <p class="portfolio__text">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-set">
-              <a href="" class="card-link link">
-                <div class="card-thumb">
-                  <div class="overlay-portfolio">
-                    <p class="overlay-text">
+            <li class="portfolio__card-set">
+              <a href="" class="portfolio__card-link link">
+                <div class="portfolio__card-thumb">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                   <img src="./images-portfolio/4.jpg" alt="Проект Prime" width="370" height="294" />
                 </div>
-                <div class="card-info">
-                  <h2 class="portfolio-title">Проект Prime</h2>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="portfolio__card-info">
+                  <h2 class="portfolio__title">Проект Prime</h2>
+                  <p class="portfolio__text">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-set">
-              <a href="" class="card-link link">
-                <div class="card-thumb">
-                  <div class="overlay-portfolio">
-                    <p class="overlay-text">
+            <li class="portfolio__card-set">
+              <a href="" class="portfolio__card-link link">
+                <div class="portfolio__card-thumb">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                   <img src="./images-portfolio/5.jpg" alt="Проект Boxes" width="370" height="294" />
                 </div>
-                <div class="card-info">
-                  <h2 class="portfolio-title">Проект Boxes</h2>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="portfolio__card-info">
+                  <h2 class="portfolio__title">Проект Boxes</h2>
+                  <p class="portfolio__text">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-set">
-              <a href="" class="card-link link">
-                <div class="card-thumb">
-                  <div class="overlay-portfolio">
-                    <p class="overlay-text">
+            <li class="portfolio__card-set">
+              <a href="" class="portfolio__card-link link">
+                <div class="portfolio__card-thumb">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                   <img src="./images-portfolio/6.jpg" alt="Inspiration has no Borders" width="370" height="294" />
                 </div>
-                <div class="card-info">
-                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <div class="portfolio__card-info">
+                  <h2 class="portfolio__title">Inspiration has no Borders</h2>
+                  <p class="portfolio__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-set">
-              <a href="" class="card-link link">
-                <div class="card-thumb">
-                  <div class="overlay-portfolio">
-                    <p class="overlay-text">
+            <li class="portfolio__card-set">
+              <a href="" class="portfolio__card-link link">
+                <div class="portfolio__card-thumb">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                   <img src="./images-portfolio/7.jpg" alt="Издание Limited Edition" width="370" height="294" />
                 </div>
-                <div class="card-info">
-                  <h2 class="portfolio-title">Издание Limited Edition</h2>
-                  <p class="portfolio-text">Дизайн</p>
+                <div class="portfolio__card-info">
+                  <h2 class="portfolio__title">Издание Limited Edition</h2>
+                  <p class="portfolio__text">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-set">
-              <a href="" class="card-link link">
-                <div class="card-thumb">
-                  <div class="overlay-portfolio">
-                    <p class="overlay-text">
+            <li class="portfolio__card-set">
+              <a href="" class="portfolio__card-link link">
+                <div class="portfolio__card-thumb">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                   <img src="./images-portfolio/8.jpg" alt="Проект LAB" width="370" height="294" />
                 </div>
-                <div class="card-info">
-                  <h2 class="portfolio-title">Проект LAB</h2>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="portfolio__card-info">
+                  <h2 class="portfolio__title">Проект LAB</h2>
+                  <p class="portfolio__text">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-set">
-              <a href="" class="card-link link">
-                <div class="card-thumb">
-                  <div class="overlay-portfolio">
-                    <p class="overlay-text">
+            <li class="portfolio__card-set">
+              <a href="" class="portfolio__card-link link">
+                <div class="portfolio__card-thumb">
+                  <div class="portfolio__overlay">
+                    <p class="portfolio__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
                   <img src="./images-portfolio/9.jpg" alt="Growing Business" width="370" height="294" />
                 </div>
-                <div class="card-info">
-                  <h2 class="portfolio-title">Growing Business</h2>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="portfolio__card-info">
+                  <h2 class="portfolio__title">Growing Business</h2>
+                  <p class="portfolio__text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -234,52 +234,52 @@
 
     <!-- Футер -->
     <footer class="footer">
-      <div class="container footer-main">
-        <section class="footer-inform">
-          <a href="./index.html" class="footer-logo"> <span class="logo-web">Web</span>Studio</a>
-          <address class="address">
-            <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="list footer-nav">
-              <li class="item">
-                <a href="mailto:info@devstudio.com" class="footer-auth link">info@devstudio.com</a>
+      <div class="container footer__main">
+        <section class="footer__inform">
+          <a href="./index.html" class="footer__logo"> <span class="logo-web">Web</span>Studio</a>
+          <address class="footer__address">
+            <p class="footer__address-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="list footer__nav">
+              <li class="footer__item item">
+                <a href="mailto:info@devstudio.com" class="footer__auth link">info@devstudio.com</a>
               </li>
-              <li class="item">
-                <a href="tel:+380961111111" class="footer-auth link">+38 096 111 11 11</a>
+              <li class="footer__item">
+                <a href="tel:+380961111111" class="footer__auth link">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </section>
 
-        <section class="join-content">
-          <h2 class="join-title">присоединяйтесь</h2>
-          <ul class="join-item">
-            <li class="list">
-              <a href="" class="join-link link">
-                <svg class="join-svg" width="20" height="20">
+        <section class="join">
+          <h2 class="join__title">присоединяйтесь</h2>
+          <ul class="join__list">
+            <li class="list join__item">
+              <a href="" class="join__link link">
+                <svg class="join__svg" width="20" height="20">
                   <use href="./images/svg-main/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="list">
-              <a href="" class="join-link link">
-                <svg class="join-svg" width="20" height="20">
+            <li class="list join__item">
+              <a href="" class="join__link link">
+                <svg class="join__svg" width="20" height="20">
                   <use href="./images/svg-main/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="list">
-              <a href="" class="join-link link">
-                <svg class="join-svg" width="20" height="20">
+            <li class="list join__item">
+              <a href="" class="join__link link">
+                <svg class="join__svg" width="20" height="20">
                   <use href="./images/svg-main/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="list">
-              <a href="" class="join-link link">
-                <svg class="join-svg" width="20" height="20">
+            <li class="list join__item">
+              <a href="" class="join__link link">
+                <svg class="join__svg" width="20" height="20">
                   <use href="./images/svg-main/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
