--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@900&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
   </head>
   <body>
     <!-- Шапка -->
@@ -71,7 +71,7 @@
                 <div class="portfolio__card-thumb">
                   <div class="portfolio__overlay">
                     <p class="portfolio__overlay-text">
-                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      Технокряк это современная площадка распространения информации. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
@@ -89,7 +89,7 @@
                 <div class="portfolio__card-thumb">
                   <div class="portfolio__overlay">
                     <p class="portfolio__overlay-text">
-                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      Технокряк это современная площадка распространения информации. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
@@ -107,7 +107,7 @@
                 <div class="portfolio__card-thumb">
                   <div class="portfolio__overlay">
                     <p class="portfolio__overlay-text">
-                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      Технокряк это современная площадка распространения информации. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
@@ -125,7 +125,7 @@
                 <div class="portfolio__card-thumb">
                   <div class="portfolio__overlay">
                     <p class="portfolio__overlay-text">
-                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      Технокряк это современная площадка распространения информации. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
@@ -143,7 +143,7 @@
                 <div class="portfolio__card-thumb">
                   <div class="portfolio__overlay">
                     <p class="portfolio__overlay-text">
-                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      Технокряк это современная площадка распространения информации. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
@@ -161,7 +161,7 @@
                 <div class="portfolio__card-thumb">
                   <div class="portfolio__overlay">
                     <p class="portfolio__overlay-text">
-                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      Технокряк это современная площадка распространения информации. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
@@ -179,7 +179,7 @@
                 <div class="portfolio__card-thumb">
                   <div class="portfolio__overlay">
                     <p class="portfolio__overlay-text">
-                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      Технокряк это современная площадка распространения информации. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
@@ -197,7 +197,7 @@
                 <div class="portfolio__card-thumb">
                   <div class="portfolio__overlay">
                     <p class="portfolio__overlay-text">
-                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      Технокряк это современная площадка распространения информации. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
@@ -215,7 +215,7 @@
                 <div class="portfolio__card-thumb">
                   <div class="portfolio__overlay">
                     <p class="portfolio__overlay-text">
-                      Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                      Технокряк это современная площадка распространения информации. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                   </div>
